# lenet-ESL

./: README.md
hls/: .gitignore  Lenet.cpp  Lenet.h  Makefile  System.cpp  System.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hls/stratus/: project.tcl
sw/: Makefile  bootstrap.S  image.h  irq.h  main.cpp
vp/: CMakeLists.txt  filter_def.h  lenet.h  lenet_def.h  lenet_weight.h  main.cpp
